--- a/dashboard/frontend/index.html
+++ b/dashboard/frontend/index.html
@@ -4,44 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IoT Vulnerability Dashboard</title>
-
-    <!-- React + Babel no navegador -->
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
-    <!-- CSS simples -->
-    <style>
-      body {
-        font-family: sans-serif;
-        background: #f5f5f5;
-        color: #333;
-        padding: 30px;
-      }
-      button {
-        margin-right: 10px;
-        padding: 10px 20px;
-        background: #007bff;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-      }
-      button:hover {
-        background: #0056b3;
-      }
-      pre {
-        background: #eee;
-        padding: 15px;
-        border-radius: 5px;
-      }
-    </style>
   </head>
 
-  <body>
-    <div id="root">Carregando Dashboard...</div>
-
-    <!-- Carrega o App diretamente -->
-    <script type="text/babel" data-presets="react" src="./src/App.jsx"></script>
+  <body class="bg-gray-50 text-gray-900">
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
